additional cleanup for Spring Security

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <head>
     	<meta charset="UTF-8"/>
 	    <title>DefoFinances Login</title>
-	
+
 	    <link th:rel="stylesheet" th:href="@{assets/bootstrap-select-1.13.9/dist/css/bootstrap-select.css}"/>
 	    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
     </head>
@@ -16,25 +16,26 @@
 		                <a class="navbar-brand" href="#">DefoFinances</a>
 		            </li>
 		        </ul>
-		    </div>	  
+		    </div>
 		</nav>
-		
+
 		<br/>
 		<br/>
-		<div>
-			<div th:if="${param.error}">
-	            Invalid username and password.
-	        </div>
-	        <div th:if="${param.logout}">
-	            You have been logged out.
-	        </div>
-	        <form th:action="@{/login}" method="post">
-	            <div><label> User Name : <input type="text" name="username"/> </label></div>
-	            <div><label> Password: <input type="password" name="password"/> </label></div>
-	            <div><input type="submit" value="Sign In"/></div>
-	        </form>
-        
+		<div  class="position-relative">
+      <div class="position-absolute top-50 start-50 translate-middle">
+        <div th:if="${param.error}">
+              Invalid username and password.
+          </div>
+          <div th:if="${param.logout}">
+              You have been logged out.
+          </div>
+          <form th:action="@{/login}" method="post">
+              <div><label> User Name : <input type="text" name="username"/> </label></div>
+              <div><label> Password: <input type="password" name="password"/> </label></div>
+              <div><input type="submit" value="Sign In"/></div>
+          </form>
+      </div>
 		</div>
-        
+
     </body>
 </html>
