--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,7 +3,7 @@
     xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8"/>
-    <title>DefoFinances</title>
+    <title>DefoFinances Error</title>
 
     <link th:rel="stylesheet" th:href="@{assets/bootstrap-select-1.13.9/dist/css/bootstrap-select.css}"/>
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
@@ -21,6 +21,7 @@
   	</nav>
         <!--h1>Welcome to DefoFinances</h1-->
 
-        <p>Click <a th:href="@{/transactions}">here</a> to see your transactions</p>
+        <!-- Click <a th:href="@{/transactions}">here</a> to see your transactions</p-->
+        <p>Error page</p>
     </body>
 </html>
